# Zyrlo

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md
3rd/locate/: ZyrloOcr.h
cmake/: Doctest.cmake  Misc.cmake  Warnings.cmake
core/: CMakeLists.txt
core/3rd/locate/: ZyrloOcr.h
core/3rd/tts_ve/: CMakeLists.txt
core/3rd/tts_ve/inc/: ve_platform.h  ve_ttsapi.h
core/3rd/tts_ve/platform/: readme.txt
core/3rd/tts_ve/platform/inc/: vclock.h  vdata.h  vfile.h  vstream.h  vthread.h
core/3rd/tts_ve/platform/src/: audiovstream.c  audiovstream.h  localvstream.c  localvstream.h  urlvstream.c  urlvstream.h  vcharconv.c  vclock.c  vcritsec.c  vdata.c  vdatapriv.h  vfile.c  vfind.c  vfindfiles.c  vplatform.c  vstream.c  vthread.c
core/include/: BTComm.h  BaseComm.h  Buttons.h  OFMotionDetector.h  bluetoothhandler.h  kbdinputinjector.h  maincontroller.h  ocrhandler.h  paragraph.h  textpage.h  textposition.h  translator.h  uinput.h  zyrlocamera.h
core/src/: BTComm.cpp  BaseComm.cpp  OFMotionDetector.cpp  bluetoothhandler.cpp  hwhandler.cpp  hwhandler.h  kbdinputinjector.cpp  maincontroller.cpp  ocrhandler.cpp  paragraph.cpp  textpage.cpp  textpage.h  translator.cpp  ttsaudiolayer.cpp  ttsaudiolayer.h  usbcomm.cpp  usbcomm.h  zyrlocamera.cpp  zyrlotts.cpp  zyrlotts.h
core/src/cerence/: cerence_plugin.json  cerencetts.cpp  cerencetts.h  cerencetts_const.h  cerencettsengine.cpp  cerencettsengine.h  cerencettsplugin.cpp  cerencettsplugin.h  cerencettsprivate.cpp  cerencettsprivate.h  positionmapper.cpp  positionmapper.h
core/src/espeak/: espeaktts.cpp  espeaktts.h
qml/: main.qml
src/: main.cpp  maincontroller.cpp  ocrhandler.cpp  ocrhandler.h
tests/: CMakeLists.txt  test_ocrhandler.cpp  test_paragraph.cpp  test_positionmapper.cpp  test_textpage.cpp
translations/: Zyrlo_en_US.ts
ui/: CMakeLists.txt
wui/: CMakeLists.txt
wui/src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  menuwidget.cpp  menuwidget.h
wui/translations/: Zyrlo_en_US.ts
